Update strings to match spec.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     By contacting us you agree to share your information with us.
                     <br />
                     <br />
-                    <a class="btn btn-info" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    <a class="btn btn-dark" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                         Expand privacy notice
                     </a>
                 </p>
@@ -85,18 +85,18 @@
                     <div class="col-sm-6">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Are you a manager who</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                                <a href="#" class="btn btn-dark">Go somewhere</a>
+                                <h5 class="card-title">Are you a manager?</h5>
+                                <p class="card-text">You have undergone the managerial application process and currently occupy the manager position.</p>
+                                <a href="#" class="btn btn-info">I'd like to participate</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Are you a supervisor, team lead, or prospective manager who</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                                <a href="#" class="btn btn-dark">Go somewhere</a>
+                                <h5 class="card-title">Are you a supervisor, team lead, or prospective manager?</h5>
+                                <p class="card-text">You are considering a manager position and are currently on the path towards management.</p>
+                                <a href="#" class="btn btn-info">I'd like to participate</a>
                             </div>
                         </div>
                     </div>
