Add a contact page in english

--- a/volunteer-mgr.html
+++ b/volunteer-mgr.html
@@ -43,20 +43,11 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-md-10 text-center">
-                <div class="jumbotron">
-                    <div class="">
-                        <img src="./images/cfc-web-logo.png" alt="Code for Canada Logo" class="img-thumbnail" width=258>
-                        <img src="./images/psc-web-logo.jpg" alt="Public Service Commission Logo" class="img-thumbnail" width=200>
 
-                    </div>
+                
 
-                    <br />
-
-                    <h1 class="display-4">Call for volunteers</h1>
-                    <p class="lead">We're looking for federal government employees to participate in 60 min one-on-one interviews and/or observational field studies, where a researcher shadows you for 3 hours at work. These studies will guide the product direction of a modern and accessible digital environment for assessing managers.</p>
-                    <hr class="my-4">
-                    <p>We are from Code for Canada, a national non-profit that connects government innovators with the tech and design community.</p>
-                </div>
+                <br />
+                <br />
 
                 <p>
                     By contacting us you agree to share your information with us.
@@ -73,32 +64,47 @@
                 </div>
 
                 <br />
-                <br />
 
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="text-center">Want to participate?</h2>
+                        <h2 class="text-center">Contact us via Email</h2>
                         <br />
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Are you a manager?</h5>
-                                <p class="card-text">You have undergone the managerial application process and currently occupy the manager position.</p>
-                                <a href="./volunteer-mgr.html" class="btn btn-info">I'd like to participate</a>
-                            </div>
-                        </div>
+
+                <p>
+                    We appreciate your interest in helping to develop a modern testing environment for assessing managerial candidates. Inclusivity and accessibility is very important to us ; we aim to include a pool of participants that is diverse and representative of the people who work within the federal public service. 
+                </p>
+
+                <div class="card">
+                    <div class="card-header">
+                        Please write us an email with the following information.
                     </div>
-                    <div class="col-sm-6">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">Are you a supervisor, team lead, or prospective manager?</h5>
-                                <p class="card-text">You are considering a manager position and are currently on the path towards management.</p>
-                                <a href="./volunteer-mgr.html" class="btn btn-info">I'd like to participate</a>
-                            </div>
-                        </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Subject: User Research Participant</h5>
+                        <p class="card-text">
+                            What is your current position?: ____
+                            <br />
+                            What department are you currently working in?: ____
+                            <br />
+                            Are you willing to participate in a observational field study (3 hours)?: ____
+                            <br />
+                            Are you willing to participate in an interview (1 hour)?: ____
+                            <br />
+                            What province are you located in?: ____
+                            <br />
+                            Which is your preferred language to communicate in?: ____
+                            <br />
+                            Identified gender: ____
+                            <br />
+                            Identify as a Person with Disabilities: ____
+                            <br />
+                            Identify as a Visible Minority: ____
+                            <br />
+                            Identify as an Indigenous Person: ____
+                            <br />
+                        </p>
+                        <a href="#" class="btn btn-info">Send email</a>
                     </div>
                 </div>
 
