Add email funtionality

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                     <p>We are from Code for Canada, a national non-profit that connects government innovators with the tech and design community.</p>
                 </div>
 
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="text-center">Privacy Notice</h2>
+                        <br />
+                    </div>
+                </div>
                 <p>
                     By contacting us you agree to share your information with us.
                     <br />
@@ -77,7 +83,7 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="text-center">Want to participate?</h2>
+                        <h2 class="text-center">Participate</h2>
                         <br />
                     </div>
                 </div>
