--- a/volunteer-mgr.html
+++ b/volunteer-mgr.html
@@ -48,6 +48,12 @@
 
                 <br />
                 <br />
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="text-center">Privacy Notice</h2>
+                        <br />
+                    </div>
+                </div>
 
                 <p>
                     By contacting us you agree to share your information with us.
@@ -73,10 +79,12 @@
                 </div>
 
                 <p>
-                    We appreciate your interest in helping to develop a modern testing environment for assessing managerial candidates. Inclusivity and accessibility is very important to us ; we aim to include a pool of participants that is diverse and representative of the people who work within the federal public service. 
+                    We appreciate your interest in helping to develop a modern testing environment for assessing managerial candidates. Inclusivity and accessibility is very important to us; we aim to include a pool of participants that is diverse and representative of the people who work within the federal public service. 
                 </p>
 
-                <div class="card">
+                <a href="mailto:joey.hua@canada.ca?subject=User Research Participant&cc=siobhan.ozege@canada.ca&body=Your awesome message goes here.%0D%0A%0D%0AThis+is+on+a+new+line.+Go+to+http%3A%2F%2Fwww.google.com%2F." class="btn btn-info">Open an email template</a>
+
+                <!--<div class="card">
                     <div class="card-header">
                         Please write us an email with the following information.
                     </div>
@@ -106,7 +114,7 @@
                         </p>
                         <a href="#" class="btn btn-info">Send email</a>
                     </div>
-                </div>
+                </div>-->
 
                 <br />
                 <br />
