Update email content

--- a/index.html
+++ b/index.html
@@ -53,9 +53,18 @@
                     <br />
 
                     <h1 class="display-4">Call for volunteers</h1>
-                    <p class="lead">We're looking for federal government employees to participate in 60 min one-on-one interviews and/or observational field studies, where a researcher shadows you for 3 hours at work. These studies will guide the product direction of a modern and accessible digital environment for assessing managers.</p>
+                    <p class="lead">
+                        Code for Canada, in collaboration with the Public Service Commission’s Personnel Psychology Centre, are looking for federal government employees to participate in a one-on-one interview to discuss your job experience in the federal public service. This will take approximately 1 hour.</p>
+                    <p class="lead">
+                        We are also looking to recruit public servants to participate in observational field studies, to better understand your work environment. This will take approximately 3 hours, where you will be shadowed by a Code for Canada researcher.
+                    </p>
+                    <p class="lead">
+                        These studies will guide the product direction for building a modern, accessible digital tool for assessing managerial candidates.
+                    </p>
                     <hr class="my-4">
-                    <p>We are from Code for Canada, a national non-profit that connects government innovators with the tech and design community.</p>
+                    <p>
+                        Code for Canada is a national nonprofit that connects government innovators with the tech and design community. Our programs enable governments to deliver better digital public services and empower communities to solve civic challenges using technology and design.
+                    </p>
                 </div>
 
                 <div class="row">
@@ -73,8 +82,40 @@
                     </a>
                 </p>
                 <div class="collapse" id="collapseExample">
-                    <div class="card card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                    <div class="card card-body" style="text-align: left;">
+                        For any questions about this research, please contact:
+researcher_name
+researcher_phone
+researcher_email
+
+Thank you for volunteering to talk to us.
+
+We work with the Canadian Digital Service (CDS), a program in the Treasury Board of Canada Secretariat (TBS). We are working with department_name_and_acronym to improve their services. This research will help us research_goal.
+
+To do this we will ask you to session_activity. This will take session_duration
+
+By participating in this study, you understand that:
+
+During the research_method CDS may collect your personal information**, such as, your personal_information_collected.
+**CDS handles your personal information in accordance with the Privacy Act, for more information please see our Privacy Statement.
+
+I understand the points above and consent to participate in the research
+
+Privacy Statement
+Participation is completely voluntary.
+
+By participating in this research you consent that your personal_information_collected will be collected. CDS may publish or share with other government institutions a summary of what we have learned from this research, including quotes or narratives. Your name will not be associated with your responses, quotes, or narratives.
+
+CDS is a program within the Treasury Board of Canada Secretariat (TBS). The collection and use of your personal information by TBS is authorized by the Financial Administration Act. The collection, use, and disclosure of your personal information is in accordance with the federal Privacy Act.
+
+Any personal information that may be collected is described in the Standard Personal Information Bank entitled Outreach Activities, PSU 938, which can be found in the TBS webpage Information about programs and information holdings.
+
+PSU 938: http://www.infosource.gc.ca/emp/emp03-eng.asp#psu938
+Information on programs and holdings: https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/information-about-programs-information-holdings.html
+
+Any comments or concerns you may have regarding this Statement, your privacy rights, or the Privacy Act may be directed to the TBS Access to Information and Privacy Coordinator by email at ATIP.AIPRP@tbs-sct.gc.ca or by telephone at 1-866-312-1511.
+
+You may also wish to contact the Office of the Privacy Commissioner of Canada by email at info@priv.gc.ca or by telephone at 1-800-282-1376. You have the right to complain to the Office of the Privacy Commissioner of Canada about the handling of your personal information by TBS.
                     </div>
                 </div>
 
