--- a/volunteer-mgr.html
+++ b/volunteer-mgr.html
@@ -64,8 +64,40 @@
                     </a>
                 </p>
                 <div class="collapse" id="collapseExample">
-                    <div class="card card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                    <div class="card card-body" style="text-align: left;">
+                        For any questions about this research, please contact:
+researcher_name
+researcher_phone
+researcher_email
+
+Thank you for volunteering to talk to us.
+
+We work with the Canadian Digital Service (CDS), a program in the Treasury Board of Canada Secretariat (TBS). We are working with department_name_and_acronym to improve their services. This research will help us research_goal.
+
+To do this we will ask you to session_activity. This will take session_duration
+
+By participating in this study, you understand that:
+
+During the research_method CDS may collect your personal information**, such as, your personal_information_collected.
+**CDS handles your personal information in accordance with the Privacy Act, for more information please see our Privacy Statement.
+
+I understand the points above and consent to participate in the research
+
+Privacy Statement
+Participation is completely voluntary.
+
+By participating in this research you consent that your personal_information_collected will be collected. CDS may publish or share with other government institutions a summary of what we have learned from this research, including quotes or narratives. Your name will not be associated with your responses, quotes, or narratives.
+
+CDS is a program within the Treasury Board of Canada Secretariat (TBS). The collection and use of your personal information by TBS is authorized by the Financial Administration Act. The collection, use, and disclosure of your personal information is in accordance with the federal Privacy Act.
+
+Any personal information that may be collected is described in the Standard Personal Information Bank entitled Outreach Activities, PSU 938, which can be found in the TBS webpage Information about programs and information holdings.
+
+PSU 938: http://www.infosource.gc.ca/emp/emp03-eng.asp#psu938
+Information on programs and holdings: https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/information-about-programs-information-holdings.html
+
+Any comments or concerns you may have regarding this Statement, your privacy rights, or the Privacy Act may be directed to the TBS Access to Information and Privacy Coordinator by email at ATIP.AIPRP@tbs-sct.gc.ca or by telephone at 1-866-312-1511.
+
+You may also wish to contact the Office of the Privacy Commissioner of Canada by email at info@priv.gc.ca or by telephone at 1-800-282-1376. You have the right to complain to the Office of the Privacy Commissioner of Canada about the handling of your personal information by TBS.
                     </div>
                 </div>
 
@@ -73,48 +105,44 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="text-center">Contact us via Email</h2>
+                        <h2 class="text-center">About the Study</h2>
                         <br />
                     </div>
                 </div>
 
                 <p>
-                    We appreciate your interest in helping to develop a modern testing environment for assessing managerial candidates. Inclusivity and accessibility is very important to us; we aim to include a pool of participants that is diverse and representative of the people who work within the federal public service. 
+                    We appreciate your interest in helping to develop a modern, accessible tool for assessing managerial candidates. To sign up, please send us an email with the following information filled out. The button below will open up your primary email application with the questions. 
                 </p>
 
-                <a href="mailto:joey.hua@canada.ca?subject=User Research Participant&cc=siobhan.ozege@canada.ca&body=Your awesome message goes here.%0D%0A%0D%0AThis+is+on+a+new+line.+Go+to+http%3A%2F%2Fwww.google.com%2F." class="btn btn-info">Open an email template</a>
+                <a href="mailto:joey.hua@canada.ca?subject=Code for Canada Research Screening Questionnaire&cc=siobhan.ozege@canada.ca&body=Current%20title%20%2F%20position%3A%0ACurrent%20department%3A%0ALocation%3A%0ALanguage%20preference%3A%20French%20%2F%20English%20%2F%20Both%0A%0ACurrent%20Managers%20Only%3A%0AWhich%20activities%20are%20you%20interested%20in%20participating%20in%3F%0A%20%20%20-%20Observational%20field%20study%20(approximately%203%20hours)%0A%20%20%20-%20Interview%20(approximately%201%20hour)%0A%0AInclusivity%20and%20accessibility%20are%20very%20important%20to%20us.%20As%20part%20of%20our%20research%2C%20we%20aim%20to%20collect%20information%20on%2C%20and%20speak%20to%20a%20pool%20of%20participants%20that%20is%20diverse%20and%20representative%20of%20the%20people%20who%20work%20within%20the%20federal%20public%20service.%20This%20information%20will%20be%20kept%20confidential%20and%20will%20only%20be%20used%20to%20ensure%20equitable%20participation.%0AYour%20response%20is%20voluntary%20and%20you%20may%20identify%20in%20more%20than%20one%20designated%20group.%20%0A%0AGender%3A%20Male%20%2F%20Female%20%2F%20Other%20%2F%20Prefer%20not%20to%20disclose%0A%0AAre%20you%20a%20person%20with%20a%20disability%3F%0A%20%20-%20No%0A%20%20-%20Yes%2C%20highlight%20all%20that%20apply%0A%20%20%20%20%20%20-%20Coordination%20or%20dexterity%20(difficulty%20using%20hands%20or%20arms%2C%20for%20example%2C%20grasping%20or%20handling%20a%20stapler%20or%20using%20a%20keyboard)%0A%20%20%20%20%20%20-%20Mobility%20(difficulty%20moving%20around%2C%20for%20example%2C%20from%20one%20office%20to%20another%20or%20up%20and%20down%20stairs)%0A%20%20%20%20%20%20-%20Blind%20or%20visual%20impairment%20(unable%20to%20see%20or%20difficulty%20seeing)%0A%20%20%20%20%20%20-%20Deaf%20or%20hard%20of%20hearing%20(unable%20to%20hear%20or%20difficulty%20hearing)%0A%20%20%20%20%20%20-%20Speech%20impairment%20(unable%20to%20speak%20or%20difficulty%20speaking%20and%20being%20understood)%0A%20%20%20%20%20%20-%20Other%20disability%20(including%20learning%20disabilities%2C%20developmental%20disabilities%20and%20all%20other%20types%20of%20disabilities)%0A%20%20%20%20%20%20-%20(Please%20specify)%20________________________________%0A%0AAre%20you%20an%20Aboriginal%20person%3F%0A%20%20-%20No%0A%20%20-%20Yes%2C%20highlight%20all%20that%20apply%0A%20%20%20%20%20%20-%20North%20American%20Indian%2FFirst%20Nation%0A%20%20%20%20%20%20-%20M%C3%A9tis%0A%20%20%20%20%20%20-%20Inuit%0A%0AAre%20you%20in%20a%20visible%20group%3F%0A%20%20-%20No%0A%20%20-%20Yes%2C%20highlight%20all%20that%20apply%0A%20%20-%20Black%0A%20%20-%20Chinese%0A%20%20-%20Filipino%0A%20%20-%20Japanese%0A%20%20-%20Korean%0A%20%20-%20South%20Asian%2FEast%20Indian%20(including%20Indian%20from%20India%3B%0A%20%20-%20Bangladeshi%3B%20Pakistani%3B%20East%20Indian%20from%20Guyana%2C%20Trinidad%2C%20East%20Africa%3B%20etc.)%0A%20%20-%20Southeast%20Asian%20(including%20Burmese%3B%20Cambodian%3B%20Laotian%3B%20Thai%3B%20Vietnamese%3B%20etc.)%0A%20%20-%20Non-White%20West%20Asian%2C%20North%20African%20or%20Arab%20(including%20Egyptian%3B%20Libyan%3B%20Lebanese%3B%20Iranian%3B%20etc.)%0A%20%20-%20Non-White%20Latin%20American%20(including%20indigenous%20persons%20from%20Central%20and%20South%20America%2C%20etc.)%0A%20%20-%20Person%20of%20Mixed%20Origin%20(with%20one%20parent%20in%20one%20of%20the%20visible%20minority%20groups%20listed%20above)%0A%20%20-%20Other%20Visible%20Minority%20Group%0A%20%20%20%20%20%20-%20(Please%20specify)______________________________%0A%0AThank%20you%20for%20your%20willingness%20to%20participate%2C%20and%20for%20filling%20out%20our%20screening%20questionnaire.%20If%20selected%20to%20participate%2C%20our%20researchers%20will%20be%20in%20touch%20soon%20with%20next%20steps%20to%20schedule%20an%20interview%20and%2For%20field%20study.%20
+" class="btn btn-info btn-lg">Open an email template</a>
 
-                <!--<div class="card">
-                    <div class="card-header">
-                        Please write us an email with the following information.
+                <!-- Button trigger modal -->
+                <br />
+                <br />
+                <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalLong">
+                    Email template not working?
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">Copy and paste and send an email</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                ...
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Subject: User Research Participant</h5>
-                        <p class="card-text">
-                            What is your current position?: ____
-                            <br />
-                            What department are you currently working in?: ____
-                            <br />
-                            Are you willing to participate in a observational field study (3 hours)?: ____
-                            <br />
-                            Are you willing to participate in an interview (1 hour)?: ____
-                            <br />
-                            What province are you located in?: ____
-                            <br />
-                            Which is your preferred language to communicate in?: ____
-                            <br />
-                            Identified gender: ____
-                            <br />
-                            Identify as a Person with Disabilities: ____
-                            <br />
-                            Identify as a Visible Minority: ____
-                            <br />
-                            Identify as an Indigenous Person: ____
-                            <br />
-                        </p>
-                        <a href="#" class="btn btn-info">Send email</a>
-                    </div>
-                </div>-->
+                </div>
 
                 <br />
                 <br />
