Add links and update main page text

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
                     <br />
 
-                    <h1 class="display-4">Call for volunteers</h1>
+                    <h1 class="display-4">Call for Participants</h1>
                     <p class="lead">
-                        Code for Canada, in collaboration with the Public Service Commission’s Personnel Psychology Centre, are looking for federal government employees to participate in a one-on-one interview to discuss your job experience in the federal public service. This will take approximately 1 hour.</p>
+                        Code for Canada, in collaboration with the <a href="https://www.canada.ca/en/public-service-commission.html">Public Service Commission’s Personnel Psychology Centre</a>, are looking for federal government employees to participate in a one-on-one interview to discuss your job experience in the federal public service. This will take approximately 1 hour.</p>
                     <p class="lead">
                         We are also looking to recruit public servants to participate in observational field studies, to better understand your work environment. This will take approximately 3 hours, where you will be shadowed by a Code for Canada researcher.
                     </p>
@@ -63,7 +63,7 @@
                     </p>
                     <hr class="my-4">
                     <p>
-                        Code for Canada is a national nonprofit that connects government innovators with the tech and design community. Our programs enable governments to deliver better digital public services and empower communities to solve civic challenges using technology and design.
+                        <a href="https://codefor.ca/">Code for Canada</a> is a national nonprofit that connects government innovators with the tech and design community. Our programs enable governments to deliver better digital public services and empower communities to solve civic challenges using technology and design.
                     </p>
                 </div>
 
