Update privacy notice language

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <p>
-                    By contacting us you agree to share your information with us.
+                    The Public Service Commission of Canada (PSC) is committed to protecting the privacy rights of individuals.
                     <br />
                     <br />
                     <a class="btn btn-dark" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
@@ -83,39 +83,11 @@
                 </p>
                 <div class="collapse" id="collapseExample">
                     <div class="card card-body" style="text-align: left;">
-                        For any questions about this research, please contact:
-researcher_name
-researcher_phone
-researcher_email
-
-Thank you for volunteering to talk to us.
-
-We work with the Canadian Digital Service (CDS), a program in the Treasury Board of Canada Secretariat (TBS). We are working with department_name_and_acronym to improve their services. This research will help us research_goal.
-
-To do this we will ask you to session_activity. This will take session_duration
-
-By participating in this study, you understand that:
-
-During the research_method CDS may collect your personal information**, such as, your personal_information_collected.
-**CDS handles your personal information in accordance with the Privacy Act, for more information please see our Privacy Statement.
-
-I understand the points above and consent to participate in the research
-
-Privacy Statement
-Participation is completely voluntary.
-
-By participating in this research you consent that your personal_information_collected will be collected. CDS may publish or share with other government institutions a summary of what we have learned from this research, including quotes or narratives. Your name will not be associated with your responses, quotes, or narratives.
-
-CDS is a program within the Treasury Board of Canada Secretariat (TBS). The collection and use of your personal information by TBS is authorized by the Financial Administration Act. The collection, use, and disclosure of your personal information is in accordance with the federal Privacy Act.
-
-Any personal information that may be collected is described in the Standard Personal Information Bank entitled Outreach Activities, PSU 938, which can be found in the TBS webpage Information about programs and information holdings.
-
-PSU 938: http://www.infosource.gc.ca/emp/emp03-eng.asp#psu938
-Information on programs and holdings: https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/information-about-programs-information-holdings.html
-
-Any comments or concerns you may have regarding this Statement, your privacy rights, or the Privacy Act may be directed to the TBS Access to Information and Privacy Coordinator by email at ATIP.AIPRP@tbs-sct.gc.ca or by telephone at 1-866-312-1511.
-
-You may also wish to contact the Office of the Privacy Commissioner of Canada by email at info@priv.gc.ca or by telephone at 1-800-282-1376. You have the right to complain to the Office of the Privacy Commissioner of Canada about the handling of your personal information by TBS.
+                        <p>The Public Service Commission of Canada (PSC) is committed to protecting the privacy rights of individuals.</p>
+                        <p>The definition of “personal information” is any information, in any form, about an identifiable individual. Refer to section 3 of the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/">Privacy Act</a> for further details regarding personal information.</p>
+                        <p>The personal information you provide will be used by the Personnel Psychology Centre for research and development purposes[KG1] ; and is collected under the authority of section 11 [KG2] of the Public Service Employment Act. Provision of your information is voluntary, and will not be used to make any administrative decisions about you.</p>
+                        <p>Personal information is collected and used as described in the Treasury Board Secretariat’s Standard Personal Information Bank <a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/information-about-programs-information-holdings/standard-personal-information-banks.html#psu938">Outreach Activities (PSU 938)</a></p>
+                        <p>Individuals have the right to file a complaint with the <a href="https://www.priv.gc.ca/index_e.asp">Privacy Commissioner of Canada</a> regarding the department’s handling of their personal information.</p>
                     </div>
                 </div>
 
