Add a french version of the site

--- a/fr/index.html
+++ b/fr/index.html
@@ -26,12 +26,14 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">English
-                            <span class="sr-only">(current)</span>
+                        <a class="nav-link" href="../index.html">English
+                            
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./fr/index.html">French</a>
+                        <a class="nav-link" href="#">French
+                            <span class="sr-only">(current)</span>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -45,14 +47,14 @@
             <div class="col-md-10 text-center">
                 <div class="jumbotron">
                     <div class="">
-                        <img src="./images/cfc-web-logo.png" alt="Code for Canada Logo" class="img-thumbnail" width=258>
-                        <img src="./images/psc-web-logo.jpg" alt="Public Service Commission Logo" class="img-thumbnail" width=200>
+                        <img src="../images/cfc-web-logo.png" alt="Code for Canada Logo" class="img-thumbnail" width=258>
+                        <img src="../images/psc-web-logo.jpg" alt="Public Service Commission Logo" class="img-thumbnail" width=200>
 
                     </div>
 
                     <br />
 
-                    <h1 class="display-4">Call for Participants</h1>
+                    <h1 class="display-4">Appel pour les participants</h1>
                     <p class="lead">
                         Code for Canada, in collaboration with the <a href="https://www.canada.ca/en/public-service-commission.html">Public Service Commission’s Personnel Psychology Centre</a>, are looking for federal government employees to participate in a one-on-one interview to discuss your job experience in the federal public service. This will take approximately 1 hour.</p>
                     <p class="lead">
