Update french copy that is available

--- a/fr/index.html
+++ b/fr/index.html
@@ -56,16 +56,17 @@
 
                     <h1 class="display-4">Appel pour les participants</h1>
                     <p class="lead">
-                        Code for Canada, in collaboration with the <a href="https://www.canada.ca/en/public-service-commission.html">Public Service Commission’s Personnel Psychology Centre</a>, are looking for federal government employees to participate in a one-on-one interview to discuss your job experience in the federal public service. This will take approximately 1 hour.</p>
-                    <p class="lead">
-                        We are also looking to recruit public servants to participate in observational field studies, to better understand your work environment. This will take approximately 3 hours, where you will be shadowed by a Code for Canada researcher.
+                        Code for Canada, en collaboration avec <a href="https://www.canada.ca/en/public-service-commission.html">Le Centre de psychologie du personnel (CPP) de la Commission de la fonction publique (CFP)</a>, sont à la recherche des employés du gouvernement fédéral de participer à une entrevue d'une sur un pour discuter de votre expérience de travail dans la fonction publique fédérale. Cela prendra environ 1 heure.
                     </p>
                     <p class="lead">
-                        These studies will guide the product direction for building a modern, accessible digital tool for assessing managerial candidates.
+                        Nous cherchons également à recruter des fonctionnaires pour participer à des études d'observation sur le terrain afin de mieux comprendre votre environnement de travail. Cela va prendre environ 3 heures, et un chercheur de Code for Canada vous observir.
+                    </p>
+                    <p class="lead">
+                        Cette recherche guidera notre orientation de produit pour la construction d'un outil moderne numérique et accessible, pour l'évaluation des candidats de gestion.
                     </p>
                     <hr class="my-4">
                     <p>
-                        <a href="https://codefor.ca/">Code for Canada</a> is a national nonprofit that connects government innovators with the tech and design community. Our programs enable governments to deliver better digital public services and empower communities to solve civic challenges using technology and design.
+                        <a href="https://codefor.ca/">Code for Canada</a> est une organisation sans but lucratif nationale qui réunit des innovateurs du gouvernement avec la communauté de la technologie et du design. Nos programmes permettent au gouvernement d’offrir des services publics numériques de meilleure qualité et de donner aux communautés les moyens de faire face à des défis d’ordre civique à l’aide de la technologie et du design.
                     </p>
                 </div>
 
