Update french/english links

--- a/volunteer-mgr.html
+++ b/volunteer-mgr.html
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">French</a>
+                        <a class="nav-link" href="./fr/volunteer-mgr.html">French</a>
                     </li>
                 </ul>
             </div>
