--- a/fr/volunteer-mgr.html
+++ b/fr/volunteer-mgr.html
@@ -26,12 +26,13 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">English
-                            <span class="sr-only">(current)</span>
+                        <a class="nav-link" href="../volunteer-mgr.html">English
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">French</a>
+                        <a class="nav-link" href="#">French
+                            <span class="sr-only">(current)</span>
+                        </a>
                     </li>
                 </ul>
             </div>
