Update french and english text with full translations

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <br />
                     <br />
                     <a class="btn btn-dark" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                        Expand privacy notice
+                        Expand
                     </a>
                 </p>
                 <div class="collapse" id="collapseExample">
@@ -105,17 +105,17 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Are you a manager?</h5>
-                                <p class="card-text">You have undergone the managerial application process and currently occupy the manager position.</p>
-                                <a href="./volunteer-mgr.html" class="btn btn-info">I'd like to participate</a>
+                                <p class="card-text">Please click if you have undergone the managerial application process and currently occupy the manager position.</p>
+                                <a href="./volunteer-mgr.html" class="btn btn-info">I want to participate</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Are you a supervisor, team lead, or prospective manager?</h5>
-                                <p class="card-text">You are considering a manager position and are currently on the path towards management.</p>
-                                <a href="./volunteer-mgr.html" class="btn btn-info">I'd like to participate</a>
+                                <h5 class="card-title">Are you a supervisor or team leader, who wants to become a manager?</h5>
+                                <p class="card-text">Please click if you are considering a management position / on the management path.</p>
+                                <a href="./volunteer-mgr.html" class="btn btn-info">I want to participate</a>
                             </div>
                         </div>
                     </div>
