--- a/volunteer-mgr.html
+++ b/volunteer-mgr.html
@@ -60,7 +60,7 @@
                     <br />
                     <br />
                     <a class="btn btn-dark" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                        Expand privacy notice
+                        Expand
                     </a>
                 </p>
                 <div class="collapse" id="collapseExample">
@@ -95,7 +95,7 @@
                 <br />
                 <br />
                 <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalLong">
-                    Email template not working?
+                    Template not working?
                 </button>
 
                 <!-- Modal -->
