--- a/fr/index.html
+++ b/fr/index.html
@@ -72,25 +72,25 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="text-center">Privacy Notice</h2>
+                        <h2 class="text-center">Avis de confidentialité</h2>
                         <br />
                     </div>
                 </div>
                 <p>
-                    The Public Service Commission of Canada (PSC) is committed to protecting the privacy rights of individuals.
+                    La Commission de la fonction publique (CFP) s'engage à protéger les renseignements personnels des individus.
                     <br />
                     <br />
                     <a class="btn btn-dark" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                        Expand privacy notice
+                        Étendre
                     </a>
                 </p>
                 <div class="collapse" id="collapseExample">
                     <div class="card card-body" style="text-align: left;">
-                        <p>The Public Service Commission of Canada (PSC) is committed to protecting the privacy rights of individuals.</p>
-                        <p>The definition of “personal information” is any information, in any form, about an identifiable individual. Refer to section 3 of the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/">Privacy Act</a> for further details regarding personal information.</p>
-                        <p>The personal information you provide will be used by the Personnel Psychology Centre for research and development purposes[KG1] ; and is collected under the authority of section 11 [KG2] of the Public Service Employment Act. Provision of your information is voluntary, and will not be used to make any administrative decisions about you.</p>
-                        <p>Personal information is collected and used as described in the Treasury Board Secretariat’s Standard Personal Information Bank <a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/information-about-programs-information-holdings/standard-personal-information-banks.html#psu938">Outreach Activities (PSU 938)</a></p>
-                        <p>Individuals have the right to file a complaint with the <a href="https://www.priv.gc.ca/index_e.asp">Privacy Commissioner of Canada</a> regarding the department’s handling of their personal information.</p>
+                        <p>La Commission de la fonction publique (CFP) s'engage à protéger les renseignements personnels des individus.</p>
+                        <p>La définition de “renseignements personnel” est toute renseignements, sous quelque forme, sur une personne identifiable. Référer à l’article 3 de <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/">la Lois sur la protection des renseignements personnel</a> pour plusieurs de détails à propos les renseignements personnel.</p>
+                        <p>Les données recueillies personnels que vous fournissez seront utilisés par le Centre de psychologie du personnel à des fins de recherche et de développement;, et est recueilli en vertu de l'article 11 de la Loi sur l'emploi dans la fonction publique. La communication de vos informations est volontaire et ne sera pas utilisée pour prendre des décisions administratives à votre sujet.</p>
+                        <p>Les renseignements personnels sont recueillis et utilisés de la manière décrite dans les activités de sensibilisation du fichier de renseignements personnels standard du <a href="https://www.canada.ca/fr/secretariat-conseil-tresor/services/acces-information-protection-reseignements-personnels/acces-information/renseignements-programmes-fonds-renseignements/fichiers-renseignements-personnels-ordinaires.html">Secrétariat du Conseil du Trésor (PSU 938)</a></p>
+                        <p>Les individus ont le droit de déposer une plainte auprès du <a href="https://www.priv.gc.ca/index_e.asp">commissaire du Canada protection des renseignements personnels</a> au sujet de la gestion du ministère de leurs renseignements personnels.</p>
                     </div>
                 </div>
 
@@ -107,18 +107,18 @@
                     <div class="col-sm-6">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Are you a manager?</h5>
-                                <p class="card-text">You have undergone the managerial application process and currently occupy the manager position.</p>
-                                <a href="./volunteer-mgr.html" class="btn btn-info">I'd like to participate</a>
+                                <h5 class="card-title">Êtes-vous un gérant?</h5>
+                                <p class="card-text">S'il vous plaît cliquer si vous avez subi le processus d'application de gestion et occupent actuellement le poste de gestionnaire.</p>
+                                <a href="./volunteer-mgr.html" class="btn btn-info">Je veux participer</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Are you a supervisor, team lead, or prospective manager?</h5>
-                                <p class="card-text">You are considering a manager position and are currently on the path towards management.</p>
-                                <a href="./volunteer-mgr.html" class="btn btn-info">I'd like to participate</a>
+                                <h5 class="card-title">Êtes-vous un superviseur ou chef d'équipe, qui veut devenir un gérant?</h5>
+                                <p class="card-text">Cliquez s'il vous plaît si vous envisagez un poste de direction / sur le chemin de la gestion.</p>
+                                <a href="./volunteer-mgr.html" class="btn btn-info">Je veux participer</a>
                             </div>
                         </div>
                     </div>
