--- a/fr/volunteer-mgr.html
+++ b/fr/volunteer-mgr.html
@@ -51,26 +51,25 @@
                 <br />
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="text-center">Privacy Notice</h2>
+                        <h2 class="text-center">Avis de confidentialité</h2>
                         <br />
                     </div>
                 </div>
-
                 <p>
-                    The Public Service Commission of Canada (PSC) is committed to protecting the privacy rights of individuals.
+                    La Commission de la fonction publique (CFP) s'engage à protéger les renseignements personnels des individus.
                     <br />
                     <br />
                     <a class="btn btn-dark" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                        Expand privacy notice
+                        Étendre
                     </a>
                 </p>
                 <div class="collapse" id="collapseExample">
                     <div class="card card-body" style="text-align: left;">
-                        <p>The Public Service Commission of Canada (PSC) is committed to protecting the privacy rights of individuals.</p>
-                        <p>The definition of “personal information” is any information, in any form, about an identifiable individual. Refer to section 3 of the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/">Privacy Act</a> for further details regarding personal information.</p>
-                        <p>The personal information you provide will be used by the Personnel Psychology Centre for research and development purposes[KG1] ; and is collected under the authority of section 11 [KG2] of the Public Service Employment Act. Provision of your information is voluntary, and will not be used to make any administrative decisions about you.</p>
-                        <p>Personal information is collected and used as described in the Treasury Board Secretariat’s Standard Personal Information Bank <a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/information-about-programs-information-holdings/standard-personal-information-banks.html#psu938">Outreach Activities (PSU 938)</a></p>
-                        <p>Individuals have the right to file a complaint with the <a href="https://www.priv.gc.ca/index_e.asp">Privacy Commissioner of Canada</a> regarding the department’s handling of their personal information.</p>
+                        <p>La Commission de la fonction publique (CFP) s'engage à protéger les renseignements personnels des individus.</p>
+                        <p>La définition de “renseignements personnel” est toute renseignements, sous quelque forme, sur une personne identifiable. Référer à l’article 3 de <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/">la Lois sur la protection des renseignements personnel</a> pour plusieurs de détails à propos les renseignements personnel.</p>
+                        <p>Les données recueillies personnels que vous fournissez seront utilisés par le Centre de psychologie du personnel à des fins de recherche et de développement;, et est recueilli en vertu de l'article 11 de la Loi sur l'emploi dans la fonction publique. La communication de vos informations est volontaire et ne sera pas utilisée pour prendre des décisions administratives à votre sujet.</p>
+                        <p>Les renseignements personnels sont recueillis et utilisés de la manière décrite dans les activités de sensibilisation du fichier de renseignements personnels standard du <a href="https://www.canada.ca/fr/secretariat-conseil-tresor/services/acces-information-protection-reseignements-personnels/acces-information/renseignements-programmes-fonds-renseignements/fichiers-renseignements-personnels-ordinaires.html">Secrétariat du Conseil du Trésor (PSU 938)</a></p>
+                        <p>Les individus ont le droit de déposer une plainte auprès du <a href="https://www.priv.gc.ca/index_e.asp">commissaire du Canada protection des renseignements personnels</a> au sujet de la gestion du ministère de leurs renseignements personnels.</p>
                     </div>
                 </div>
 
@@ -78,25 +77,25 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="text-center">About the Study</h2>
+                        <h2 class="text-center">A propos de l'étude</h2>
                         <br />
                     </div>
                 </div>
 
                 <p>
-                    We appreciate your interest in helping to develop a modern, accessible tool for assessing managerial candidates. To sign up, please send us an email with the following information filled out. The button below will open up your primary email application with the questions. 
+                    Nous vous remercions de votre intérêt pour aider à développer un outil moderne et accessible à l'évaluation des candidats de gestion. Pour vous inscrire, s'il vous plaît envoyez-nous un courriel avec les informations suivantes. Le bouton ci-dessous ouvrira votre application de messagerie principale avec les questions.
                 </p>
                 <p>
                     Inclusivité et l'accessibilité sont très importants pour nous. Dans le cadre de notre recherche, notre objectif est de recueillir des informations sur, et parler à un groupe de participants qui est diversifié et représentatif des personnes qui travaillent dans la fonction publique fédérale. Ces informations resteront confidentielles et ne seront utilisées que pour assurer une participation équitable.
                 </p>
 
-                <a href="mailto:joey.hua@canada.ca?subject=Questionnaire de sélection pour la recherche de Code for Canada&cc=siobhan.ozege@canada.ca&body=Titre%20%2F%20poste%20actuel%3A%0AD%C3%A9partement%20actuel%3A%0AEmplacement%3A%0ALangue%20pr%C3%A9f%C3%A9r%C3%A9e%3A%20fran%C3%A7ais%20%2F%20anglais%20%2F%20les%20deux%0A%0APour%20les%20gestionnaires%20courante%20seulement%3A%0ADans%20quel%20activit%C3%A9%20voulez%20vous%20participer%3F%0A%C3%89tude%20d%27observation%20sur%20le%20terrain%20(environ%203%20heures)%0AEntretien%20(environ%201%20heure)%0A%0AVotre%20collaboration%20est%20facultative%20et%20vous%20pouvez%20vous%20identifier%20avec%20plus%20d%27un%20groupe%20d%C3%A9sign%C3%A9.%0A%0ASexe%3A%20Homme%20%2F%20Femme%20%2F%20Autre%20%2F%20Pr%C3%A9f%C3%A8re%20ne%20pas%20divulguer%0A%0A%C3%8Ates-vous%20une%20personne%20handicap%C3%A9e%3F%0Ahttps%3A%2F%2Fwww.canada.ca%2Ffr%2Fsecretariat-conseil-tresor%2Fservices%2Fvaleurs-ethique%2Fdiversite-equite%2Fformulaire-declaration-volontaire-employe.html%0A%20%20Non%0A%20%20Oui%2C%20veuillez%20cocher%20le%20cercle%20appropri%C3%A9%0A%20%20%20%20Coordination%20ou%20dext%C3%A9rit%C3%A9%0A%20%20%20%20Mobilit%C3%A9%0A%20%20%20%20C%C3%A9cit%C3%A9%20ou%20malvoyance%0A%20%20%20%20Surdit%C3%A9%20ou%20malentendance%0A%20%20%20%20%C3%89locution%0A%20%20%20%20Autre%20handicap%0A%20%20%20%20%20%20(Veuillez%20pr%C3%A9ciser)%20___%0A%0A%C3%8Ates-vous%20autochtone%3F%0A%20%20Non%0A%20%20Oui%0A%0A%C3%8Ates-vous%20membre%20d%27une%20minorit%C3%A9%20visible%3F%0A%20%20Non%0A%20%20Oui%0A%0AMerci%20pour%20le%20volont%C3%A9%20de%20participer%20et%20de%20remplir%20notre%20questionnaire%20de%20s%C3%A9lection.%20Si%20vous%20sont%20choisis%20pour%20participer%2C%20nos%20chercheurs%20serons%20en%20contact%20bient%C3%B4t%20avec%20les%20prochaines%20%C3%A9tapes%20pour%20planifier%20une%20interview%20et%20%2F%20ou%20une%20%C3%A9tude%20de%20terrain.%0A" class="btn btn-info btn-lg">Open an email template</a>
+                <a href="mailto:joey.hua@canada.ca?subject=Questionnaire de sélection pour la recherche de Code for Canada&cc=siobhan.ozege@canada.ca&body=Titre%20%2F%20poste%20actuel%3A%0AD%C3%A9partement%20actuel%3A%0AEmplacement%3A%0ALangue%20pr%C3%A9f%C3%A9r%C3%A9e%3A%20fran%C3%A7ais%20%2F%20anglais%20%2F%20les%20deux%0A%0APour%20les%20gestionnaires%20courante%20seulement%3A%0ADans%20quel%20activit%C3%A9%20voulez%20vous%20participer%3F%0A%C3%89tude%20d%27observation%20sur%20le%20terrain%20(environ%203%20heures)%0AEntretien%20(environ%201%20heure)%0A%0AVotre%20collaboration%20est%20facultative%20et%20vous%20pouvez%20vous%20identifier%20avec%20plus%20d%27un%20groupe%20d%C3%A9sign%C3%A9.%0A%0ASexe%3A%20Homme%20%2F%20Femme%20%2F%20Autre%20%2F%20Pr%C3%A9f%C3%A8re%20ne%20pas%20divulguer%0A%0A%C3%8Ates-vous%20une%20personne%20handicap%C3%A9e%3F%0Ahttps%3A%2F%2Fwww.canada.ca%2Ffr%2Fsecretariat-conseil-tresor%2Fservices%2Fvaleurs-ethique%2Fdiversite-equite%2Fformulaire-declaration-volontaire-employe.html%0A%20%20Non%0A%20%20Oui%2C%20veuillez%20cocher%20le%20cercle%20appropri%C3%A9%0A%20%20%20%20Coordination%20ou%20dext%C3%A9rit%C3%A9%0A%20%20%20%20Mobilit%C3%A9%0A%20%20%20%20C%C3%A9cit%C3%A9%20ou%20malvoyance%0A%20%20%20%20Surdit%C3%A9%20ou%20malentendance%0A%20%20%20%20%C3%89locution%0A%20%20%20%20Autre%20handicap%0A%20%20%20%20%20%20(Veuillez%20pr%C3%A9ciser)%20___%0A%0A%C3%8Ates-vous%20autochtone%3F%0A%20%20Non%0A%20%20Oui%0A%0A%C3%8Ates-vous%20membre%20d%27une%20minorit%C3%A9%20visible%3F%0A%20%20Non%0A%20%20Oui%0A%0AMerci%20pour%20le%20volont%C3%A9%20de%20participer%20et%20de%20remplir%20notre%20questionnaire%20de%20s%C3%A9lection.%20Si%20vous%20sont%20choisis%20pour%20participer%2C%20nos%20chercheurs%20serons%20en%20contact%20bient%C3%B4t%20avec%20les%20prochaines%20%C3%A9tapes%20pour%20planifier%20une%20interview%20et%20%2F%20ou%20une%20%C3%A9tude%20de%20terrain.%0A" class="btn btn-info btn-lg">Ouvrez un modèle de courriel</a>
 
                 <!-- Button trigger modal -->
                 <br />
                 <br />
                 <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalLong">
-                    Email template not working?
+                    Modèle de ne fonctionne pas?
                 </button>
 
                 <!-- Modal -->
@@ -110,12 +109,12 @@
                                 </button>
                             </div>
                             <div class="modal-body" style="text-align: left;">
-                                <p><b>Please copy and paste the following email template and email your response to joey.hua@canada.ca and siobhan.ozege@canada.ca</b></p>
+                                <p><b>Veuillez copier et coller le modèle de courrier électronique suivant et envoyer votre réponse par courrier électronique à joey.hua@canada.ca et siobhan.ozege@canada.ca</b></p>
                                 <p>Sujet: Questionnaire de sélection pour la recherche de Code for Canada</p>
                                 <p>Titre / poste actuel:<br />Département actuel:<br />Emplacement:<br />Langue préférée: français / anglais / les deux<br /><br />Pour les gestionnaires courante seulement:<br />Dans quel activité voulez vous participer?<br />Étude d'observation sur le terrain (environ 3 heures)<br />Entretien (environ 1 heure)<br /><br />Votre collaboration est facultative et vous pouvez vous identifier avec plus d'un groupe désigné.<br /><br />Sexe: Homme / Femme / Autre / Préfère ne pas divulguer<br /><br />Êtes-vous une personne handicapée?<br />  Non<br />  Oui, veuillez cocher le cercle approprié<br />    Coordination ou dextérité (difficulté à se servir des mains ou bras, par exemple pour saisir ou utiliser une agrafeuse ou pour travailler au clavier)<br />    Mobilité (difficulté à se déplacer d'un local à l'autre, à monter ou à descendre les escaliers, etc.)<br />    Cécité ou malvoyance (incapacité ou difficulté à voir)<br />    Surdité ou malentendance (incapacité ou difficulté à entendre)<br />    Élocution (incapacité à parler ou difficulté à parler et à se faire comprendre)<br />    Autre handicap (difficultés d'apprentissage ou de développement et tout autre type de handicap)<br />      (Veuillez préciser) ___<br /><br />Êtes-vous autochtone?<br />  Non<br />  Oui<br /><br />Êtes-vous membre d'une minorité visible?<br />  Non<br />  Oui<br /><br />Merci pour le volonté de participer et de remplir notre questionnaire de sélection. Si vous sont choisis pour participer, nos chercheurs serons en contact bientôt avec les prochaines étapes pour planifier une interview et / ou une étude de terrain.<br /></p>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
                             </div>
                         </div>
                     </div>
