Copy Update to Home Page
Made minor grammatical changes to improve flow of text on landing page.

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 
                     <h1 class="display-4">Call for Participants</h1>
                     <p class="lead">
-                        Code for Canada, in collaboration with the <a href="https://www.canada.ca/en/public-service-commission.html">Public Service Commission’s Personnel Psychology Centre</a>, are looking for federal government employees to participate in a one-on-one interview to discuss your job experience in the federal public service. This will take approximately 1 hour.</p>
+                        Code for Canada, in collaboration with the <a href="https://www.canada.ca/en/public-service-commission.html">Public Service Commission’s Personnel Psychology Centre</a>, are looking employees in the federal government to participate in one-on-one interviews to discuss their job experience in the federal public service. This will take approximately 1 hour.</p>
                     <p class="lead">
-                        We are also looking to recruit public servants to participate in observational field studies, to better understand your work environment. This will take approximately 3 hours, where you will be shadowed by a Code for Canada researcher.
+                        We are also looking to recruit public servants in managerial roles to participate in observational field studies to better understand your work environment. This will take approximately 3 hours, where you will be shadowed by a Code for Canada researcher.
                     </p>
                     <p class="lead">
-                        These studies will guide the product direction for building a modern, accessible digital tool for assessing managerial candidates.
+                        These studies will guide the product direction for building a more modern, accessible digital tool for assessing managerial candidates.
                     </p>
                     <hr class="my-4">
                     <p>
@@ -85,7 +85,7 @@
                     <div class="card card-body" style="text-align: left;">
                         <p>The Public Service Commission of Canada (PSC) is committed to protecting the privacy rights of individuals.</p>
                         <p>The definition of “personal information” is any information, in any form, about an identifiable individual. Refer to section 3 of the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/">Privacy Act</a> for further details regarding personal information.</p>
-                        <p>The personal information you provide will be used by the Personnel Psychology Centre for research and development purposes[KG1] ; and is collected under the authority of section 11 [KG2] of the Public Service Employment Act. Provision of your information is voluntary, and will not be used to make any administrative decisions about you.</p>
+                        <p>The personal information you provide will be used by the Personnel Psychology Centre for research and development purposes; and is collected under the authority of section 11 of the Public Service Employment Act. Provision of your information is voluntary, and will not be used to make any administrative decisions about you.</p>
                         <p>Personal information is collected and used as described in the Treasury Board Secretariat’s Standard Personal Information Bank <a href="https://www.canada.ca/en/treasury-board-secretariat/services/access-information-privacy/access-information/information-about-programs-information-holdings/standard-personal-information-banks.html#psu938">Outreach Activities (PSU 938)</a></p>
                         <p>Individuals have the right to file a complaint with the <a href="https://www.priv.gc.ca/index_e.asp">Privacy Commissioner of Canada</a> regarding the department’s handling of their personal information.</p>
                     </div>
@@ -105,7 +105,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Are you a manager?</h5>
-                                <p class="card-text">Please click if you have undergone the managerial application process and currently occupy the manager position.</p>
+                                <p class="card-text">Please click if you have undergone a managerial application process and currently occupy a manager position.</p>
                                 <a href="./volunteer-mgr.html" class="btn btn-info">I want to participate</a>
                             </div>
                         </div>
@@ -113,8 +113,8 @@
                     <div class="col-sm-6">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Are you a supervisor or team leader, who wants to become a manager?</h5>
-                                <p class="card-text">Please click if you are considering a management position / on the management path.</p>
+                                <h5 class="card-title">Are you a supervisor or team leader who hopes to become a manager?</h5>
+                                <p class="card-text">Please click if you are considering a management position / on the path to management.</p>
                                 <a href="./volunteer-mgr.html" class="btn btn-info">I want to participate</a>
                             </div>
                         </div>
