--- a/volunteer-mgr.html
+++ b/volunteer-mgr.html
@@ -83,7 +83,7 @@
                 </div>
 
                 <p>
-                    We appreciate your interest in helping to develop a more modern and accessible tool for assessing managerial candidates. To sign up, please send us an email with the following information. By cliking on the button below, it will open your primary email application with a pre-populated email. 
+                    We appreciate your interest in helping to develop a more modern and accessible tool for assessing managerial candidates. To sign up, please send us an email with the following information. By clicking on the button below, it will open your primary email application with a pre-populated email. 
                 </p>
                 <p>
                     Inclusivity and accessibility are very important to us. As part of our research, we aim to collect information on, and speak to, a pool of participants that is diverse and representative of the people who work within the federal public service. This information will be kept confidential and will only be used to ensure equitable participation.
